# forrs-frontend

./: Cargo.toml  README.md
src/: lib.rs  login_form.rs  main.rs  menu.rs
src/login_form/: text_field.rs
static/: index.html
