[package]
name = "forrs-frontend"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

[lib]
name = "forrs_frontend"
path = "src/lib.rs"

[dependencies]
yew = "0.10"
yew-router = "0.7"
forrs-data = { git = "https://github.com/forrs/forrs-data" }
serde = { version = "1", features = ["derive"] }
log = "*"
web_logger = "0.2"
